Add Custom TagHelper

--- a/SportStore/SportStore/Views/Product/List.cshtml
+++ b/SportStore/SportStore/Views/Product/List.cshtml
@@ -1,7 +1,7 @@
 ﻿
-@model IEnumerable<Product>
+@model ProductListViewModel
 
-@foreach (var p in Model)
+@foreach (var p in Model.Products)
 {
     <div>
         <h3>@p.Name</h3>
@@ -9,3 +9,5 @@
         <h4>@p.Price.ToString("c")</h4>
     </div>
 }
+
+<div page-model="@Model.PagingInfo" page-action="List"> </div>
