--- a/SportStore/SportStore/Views/Shared/_Layout.cshtml
+++ b/SportStore/SportStore/Views/Shared/_Layout.cshtml
@@ -3,11 +3,22 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
+    <link rel="stylesheet"
+          href="~/lib/twitter-bootstrap/css/bootstrap.css"
+         />
     <title>SportsStore</title>
 </head>
 <body>
-    <div>
-        @RenderBody()
+    <div class="navbar navbar-dark bg-dark" role="navigation">
+        <a class="navbar-brand" href="#">SPORTS STORE</a>
+    </div>
+    <div class="row m-1 p-1">
+        <div id="categories" class="col-3">
+            Put something useful later
+        </div>
+        <div class="col-9">
+            @RenderBody()
+        </div>
     </div>
 </body>
 </html>
