--- a/SportStore/SportStore/Views/_ViewImports.cshtml
+++ b/SportStore/SportStore/Views/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using SportStore.Models
 @using SportStore.Models.ViewModels
-@addTagHelper *, Microsoft.AspNetCore.Mvs.TagHelpers
 @addTagHelper SportStore.Infrastructure.*, SportStore
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
