--- a/SportStore/SportStore/Views/_ViewImports.cshtml
+++ b/SportStore/SportStore/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using SportStore.Models
 @using SportStore.Models.ViewModels
+@using SportStore.Infrastructure
 @addTagHelper SportStore.Infrastructure.*, SportStore
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
