--- a/SportStore/SportStore/Views/Cart/Index.cshtml
+++ b/SportStore/SportStore/Views/Cart/Index.cshtml
@@ -19,6 +19,19 @@
             <td class="text-left">@line.Product.Name</td>
             <td class="text-left">@line.Product.Price</td>
             <td class="text-right">@((line.Quantity * line.Product.Price).ToString("c"))</td>
+            <td>
+                <form asp-action="RemoveFromCart" method="Post">
+                    <input type="hidden" name="ProductId"
+                           value="@line.Product.ProductId" />
+
+                    <input type="hidden" name="returnUrl"
+                           value="@Model.ReturnUrl" />
+
+                    <button type="submit" class="btn btn-sm btn-danger">
+                        Remove
+                    </button>
+                </form>
+            </td>
         </tr>
         }
     </tbody>
