Add order controller and forms

--- a/SportStore/SportStore/Views/Shared/_Layout.cshtml
+++ b/SportStore/SportStore/Views/Shared/_Layout.cshtml
@@ -4,13 +4,18 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <link rel="stylesheet"
-          href="~/lib/twitter-bootstrap/css/bootstrap.css"
-         />
+          href="~/lib/twitter-bootstrap/css/bootstrap.css"/>
+    <link rel="stylesheet" href="~/lib/font-awesome/css/fontawesome.css"/>
     <title>SportsStore</title>
 </head>
 <body>
     <div class="navbar navbar-dark bg-dark" role="navigation">
-        <a class="navbar-brand" href="#">SPORTS STORE</a>
+        <div class="row w-100">
+            <a class="col navbar-brand" href="#">SPORTS STORE</a>
+            <div class="col-4 text-right">
+                @await Component.InvokeAsync("CartSummary")
+            </div>
+        </div>
     </div>
     <div class="row m-1 p-1">
         <div id="categories" class="col-3">
