--- a/SportStore/SportStore/Views/Cart/Index.cshtml
+++ b/SportStore/SportStore/Views/Cart/Index.cshtml
@@ -23,10 +23,8 @@
                 <form asp-action="RemoveFromCart" method="Post">
                     <input type="hidden" name="ProductId"
                            value="@line.Product.ProductId" />
-
                     <input type="hidden" name="returnUrl"
                            value="@Model.ReturnUrl" />
-
                     <button type="submit" class="btn btn-sm btn-danger">
                         Remove
                     </button>
@@ -45,4 +43,7 @@
 
 <div class="text-center">
     <a class="btn btn-primary" href="@Model.ReturnUrl">Continue shopping</a>
+    <a class="btn btn-primary" asp-action="Checkout" asp-controller="Order">
+        Checkout
+    </a>
 </div>
